<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">App Tracking</string>
    <string name="home_title">Home</string>
    <string name="usage_limits">Usage limits</string>
    <string name="more">MORE</string>
    <string name="total_usage">Total Usage:</string>
    <string name="usage_time">Usage Time</string>
    <string name="filter">FILTER</string>
    <string name="usage_time_percent">%1$s %%</string>
    <string name="usage_time_minus">%1$s m</string>
    <string name="usage_time_second">%1$s s</string>
    <string name="today_usage">Today\'s usage: %s</string>

    <string name="name_a_to_z">Name (A to Z)</string>
    <string name="name_z_to_a">Name (Z to A)</string>
    <string name="usage_time_largest">Usage time largest</string>
    <string name="usage_time_smallest">Usage time smallest</string>
    <string name="permission_please">Permission… Please</string>
    <string name="the_usage_permission_provides_access_to_your_app_usage_stats_app_tracking_will_not_work_without_this_permission">The usage permission provides access to your app usage stats. App Tracking will not work without this permission!</string>
    <string name="grant_permission">GRANT PERMISSION</string>
    <string name="no_usage_limits_created">No usage limits created</string>
    <string name="you_can_use_usage_limits_to_block_yourself_from_opening_specific_apps_when_you_have_been_using_an_app_for_a_long_time">You can use usage limits to block yourself from\n opening specific apps when you have been using an app for a long time.</string>
    <string name="add_usage_limit">ADD USAGE LIMIT</string>
    <string name="add_a_usage_limit">Add a usage limit</string>
    <string name="application">Application</string>
    <string name="warning_type">Warning Type</string>
    <string name="you_will_get_a_notification_when_exceed_the_limit">You will get a notification when exceed the limit.</string>
    <string name="limit_time">Limit Time</string>
    <string name="optional_text_displayed_on_limit">Optional text displayed on limit</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="total_usage_in_limit">Total Usage</string>
    <string name="limit_reached">Limit reached</string>
    <string name="sub_text_notification">Click to open AppTracking!</string>
    <string name="usage_limit_is_exceeded">Usage limit is exceeded!</string>
    <string name="content_text_notification">%s Time limit: %s</string>

    <string name="info_background_permissions_title">System Alerts / Background Permissions</string>
    <string name="info_background_permissions_body">Newer versions of Android are becoming increasingly unreliable at starting apps from the background without user interaction; with the introduction of Doze/App Standby in Android 6.0, the requirements for an app to be started are ambiguous and often device-specific.\n\nAs such, while it is not always a requirement for this app to function, it is highly recommended that you grant the System Overlays permission on the next page. This will grant Alarmio an exemption from Android\'s usual requirements for starting an app without user interaction, and allow it to function much more reliably.</string>

    <string-array name="sort_type">
        <item>@string/usage_time_largest</item>
        <item>@string/usage_time_smallest</item>
        <item>@string/name_a_to_z</item>
        <item>@string/name_z_to_a</item>
    </string-array>

    <string-array name="warning_type">
        <item>Send Notification</item>
        <item>Block Further Usage</item>
    </string-array>

    <string-array name="waring_type_total_usage">
        <item>Send Notification</item>
    </string-array>
    <string-array name="hours">
        <item>0 hrs</item>
        <item>1 hrs</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
        <item>4 hrs</item>
        <item>5 hrs</item>
        <item>6 hrs</item>
        <item>7 hrs</item>
        <item>8 hrs</item>
        <item>9 hrs</item>
        <item>10 hrs</item>
        <item>11 hrs</item>
        <item>12 hrs</item>
    </string-array>
    <string-array name="minus">
        <item>1 mins</item>
        <item>2 mins</item>
        <item>3 mins</item>
        <item>4 mins</item>
        <item>5 mins</item>
        <item>6 mins</item>
        <item>7 mins</item>
        <item>8 mins</item>
        <item>9 mins</item>
        <item>10 mins</item>
        <item>11 mins</item>
        <item>12 mins</item>
        <item>13 mins</item>
        <item>14 mins</item>
        <item>15 mins</item>
        <item>16 mins</item>
        <item>17 mins</item>
        <item>18 mins</item>
        <item>19 mins</item>
        <item>20 mins</item>
        <item>21 mins</item>
        <item>22 mins</item>
        <item>23 mins</item>
        <item>24 mins</item>
        <item>25 mins</item>
        <item>26 mins</item>
        <item>27 mins</item>
        <item>28 mins</item>
        <item>29 mins</item>
        <item>30 mins</item>
        <item>31 mins</item>
        <item>32 mins</item>
        <item>33 mins</item>
        <item>34 mins</item>
        <item>35 mins</item>
        <item>36 mins</item>
        <item>37 mins</item>
        <item>38 mins</item>
        <item>39 mins</item>
        <item>40 mins</item>
        <item>41 mins</item>
        <item>42 mins</item>
        <item>43 mins</item>
        <item>44 mins</item>
        <item>45 mins</item>
        <item>46 mins</item>
        <item>47 mins</item>
        <item>48 mins</item>
        <item>49 mins</item>
        <item>50 mins</item>
        <item>51 mins</item>
        <item>52 mins</item>
        <item>53 mins</item>
        <item>54 mins</item>
        <item>55 mins</item>
        <item>56 mins</item>
        <item>57 mins</item>
        <item>58 mins</item>
        <item>59 mins</item>

    </string-array>

    <string-array name="hours_daily">
        <item>1 am</item>
        <item>3 am</item>
        <item>5 am</item>
        <item>7 am</item>
        <item>9 am</item>
        <item>11 am</item>
        <item>1 pm</item>
        <item>3 pm</item>
        <item>5 pm</item>
        <item>7 pm</item>
        <item>9 pm</item>
        <item>11 pm</item>
    </string-array>

    <!--    By vanninh200x-->
    <string name="insights">Insights</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="today_s_app_usage" >Today\'s app usage</string>
    <string name="sort_type">Sort type</string>
    <string name="this_application_has_been_blocked_for_today">This application has been blocked for today.</string>
    <string name="usage_limit">Usage Limit:</string>
    <string name="today_s_usage">Today\'s usage:</string>
    <string name="dismiss_block">Dismiss block</string>
    <string name="today_s_times_opened">Today\'s times opened</string>
    <string name="notification_receive">Notification receive</string>
    <string name="daily_average_usage">Daily average usage</string>
    <string name="usage">Usage</string>
    <string name="charts">Charts</string>
    <string name="installation_date">Installation date</string>
    <string name="daily_breakdown">Daily Breakdown</string>
    <string name="sessions_length_breakdown">Sessions Length Breakdown</string>
    <string name="hourly_breakdown">Hourly Breakdown</string>
    <string name="choose_app_to_limit_usage_time">Choose app to limit usage time</string>
    <string name="device_unlocks">Device Unlocks</string>
    <string name="today_s_device_unlocks">Today\'s device unlocks</string>
    <string name="no_data">No data</string>
    <string name="app_usage_breakdown">App Usage Breakdown</string>
    <string name="there_is_no_usage_for_this_time_period">There is no usage for this time period</string>


</resources>